--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/css-spinners/all.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
@@ -57,19 +58,26 @@
     </section>
     <section id="footer" class="container">
         <div>
-            <h1>Search<h1>
+            <h1>Search</h1>
             <hr>
-            <i class="fal fa-search" id="lastt"></i><input type="text" placeholder="URL">
-            <br>
-            <div id="dsec">
-                <label id="label" for=".form-select">Quality:</label>
-            <select class="form-select">
-                <option selected value="1">Low</option>
-                <option value="2">High</option>
-              </select>
-            <button type="button" id="dbutt" class="btn btn-outline-light" style="margin-left: 10px;"><i class="fal fa-download"></i>Download</button>
+            <div id='loading' class="spin-parent">
+                <div class='spin light'></div>
+            </div>
+            <form>
+                <i class="fal fa-search" id="lastt"></i><input required id='url' name="url" type="url" placeholder="URL">
+                <br>
+                <div id="dsec">
+                    <label id="label" for=".form-select">Quality:</label>
+                    <select id='quality' name="quality" class="form-select">
+                        <option value="1">Low</option>
+                        <option selected value="2">High</option>
+                    </select>
+                    <button type="submit" id="dbutt" class="btn btn-outline-light" style="margin-left: 10px;"><i class="fal fa-download"></i>Download</button>
+                </div>
+                <div id='err'>Invalid URL!</div>
+            </form>
         </div>
-        </div>
+        <div id='videos'></div>
     </section>
     <!-- Javascipt -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
